// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextField  a large TextFieldComponent object should return a large TextFieldComponent object  1`] = `
.c0 {
  bg-color: white.light;
  padding-bottom: 16px;
  padding-top: 4px;
  position: relative;
  background-color: hsl(0,0%,100%);
  width: 100%;
}

.c1 {
  font-family: inherit;
  font-size: 1.2rem;
  font-weight: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  color: inherit;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  border: 1px solid hsl(0,0%,25%);
  border-radius: 8px;
  padding: 1rem;
  outline: 0;
  width: 100%;
}

.c1:focus {
  border-color: hsl(323.3,84.6%,28%);
  box-shadow: 0 0 0 1px hsl(323.3,84.6%,28%);
}

.c1:focus + label {
  color: hsl(323.3,84.6%,28%);
}

.c1[required] + label:after {
  content: "*";
}

.c1[disabled] {
  opacity: 0.3;
}

.c1[disabled] ~ * {
  color: rgba(0,0,0,0.3);
}

.c2 {
  background-color: hsl(0,0%,100%);
  left: 0.5rem;
  padding: 0 0.5rem;
  position: absolute;
  top: -0.5rem;
  font-family: inherit;
  font-size: 0.8rem;
  font-weight: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  color: inherit;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

<TextField
  activeColor="brandPrimary"
  assistiveText=""
  bgColor="white.light"
  controlId="exampleFullName"
  controlLabel="Full name"
  lg={true}
  validationError=""
>
  <ControlGroupBase
    activeColor="brandPrimary"
    assistiveText=""
    bgColor="white.light"
    controlId="exampleFullName"
    controlLabel="Full name"
    paddingBottom="16px"
    paddingTop="4px"
    validationError=""
  >
    <ControlGroup
      bgColor="white.light"
      paddingBottom="16px"
      paddingTop="4px"
    >
      <styled.div>
        <div
          className="c0"
        >
          <TextFieldComponent
            activeColor="brandPrimary"
            borderColor="hsl(0, 0%, 25%)"
            borderRadius="4px"
            color="inherit"
            fontFamily="inherit"
            fontWeight="inherit"
            id="exampleFullName"
            kerning="inherit"
            lg={true}
            padding="1rem"
            plainText={false}
            sm={false}
            textAlign="inherit"
            textDecoration="inherit"
            validationError=""
          >
            <styled.input
              id="exampleFullName"
            >
              <input
                className="c1"
                id="exampleFullName"
                readOnly={false}
                tabIndex="0"
                type="text"
              />
            </styled.input>
          </TextFieldComponent>
          <ControlLabel
            activeColor="brandPrimary"
            bgColor="hsl(0, 0%, 100%)"
            color="inherit"
            fontFamily="inherit"
            fontWeight="inherit"
            htmlFor="exampleFullName"
            kerning="inherit"
            lg={false}
            sm={false}
            textAlign="inherit"
            textDecoration="inherit"
            validationError=""
          >
            <styled.label
              activeColor="brandPrimary"
              htmlFor="exampleFullName"
            >
              <label
                className="c2"
                htmlFor="exampleFullName"
              >
                Full name
              </label>
            </styled.label>
          </ControlLabel>
        </div>
      </styled.div>
    </ControlGroup>
  </ControlGroupBase>
</TextField>
`;

exports[`TextField Component base should return a TextField object 1`] = `
.c0 {
  bg-color: white.light;
  padding-bottom: 16px;
  padding-top: 4px;
  position: relative;
  background-color: hsl(0,0%,100%);
  width: 100%;
}

.c1 {
  font-family: inherit;
  font-size: inherit;
  font-weight: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  color: inherit;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  border: 1px solid hsl(0,0%,25%);
  border-radius: 4px;
  padding: 1rem;
  outline: 0;
  width: 100%;
}

.c1:focus {
  border-color: hsl(323.3,84.6%,28%);
  box-shadow: 0 0 0 1px hsl(323.3,84.6%,28%);
}

.c1:focus + label {
  color: hsl(323.3,84.6%,28%);
}

.c1[required] + label:after {
  content: "*";
}

.c1[disabled] {
  opacity: 0.3;
}

.c1[disabled] ~ * {
  color: rgba(0,0,0,0.3);
}

.c2 {
  background-color: hsl(0,0%,100%);
  left: 0.5rem;
  padding: 0 0.5rem;
  position: absolute;
  top: -0.5rem;
  font-family: inherit;
  font-size: 0.8rem;
  font-weight: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  color: inherit;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

<TextField
  activeColor="brandPrimary"
  assistiveText=""
  bgColor="white.light"
  controlId="exampleFullName"
  controlLabel="Full name"
  validationError=""
>
  <ControlGroupBase
    activeColor="brandPrimary"
    assistiveText=""
    bgColor="white.light"
    controlId="exampleFullName"
    controlLabel="Full name"
    paddingBottom="16px"
    paddingTop="4px"
    validationError=""
  >
    <ControlGroup
      bgColor="white.light"
      paddingBottom="16px"
      paddingTop="4px"
    >
      <styled.div>
        <div
          className="c0"
        >
          <TextFieldComponent
            activeColor="brandPrimary"
            borderColor="hsl(0, 0%, 25%)"
            borderRadius="4px"
            color="inherit"
            fontFamily="inherit"
            fontWeight="inherit"
            id="exampleFullName"
            kerning="inherit"
            lg={false}
            padding="1rem"
            plainText={false}
            sm={false}
            textAlign="inherit"
            textDecoration="inherit"
            validationError=""
          >
            <styled.input
              id="exampleFullName"
            >
              <input
                className="c1"
                id="exampleFullName"
                readOnly={false}
                tabIndex="0"
                type="text"
              />
            </styled.input>
          </TextFieldComponent>
          <ControlLabel
            activeColor="brandPrimary"
            bgColor="hsl(0, 0%, 100%)"
            color="inherit"
            fontFamily="inherit"
            fontWeight="inherit"
            htmlFor="exampleFullName"
            kerning="inherit"
            lg={false}
            sm={false}
            textAlign="inherit"
            textDecoration="inherit"
            validationError=""
          >
            <styled.label
              activeColor="brandPrimary"
              htmlFor="exampleFullName"
            >
              <label
                className="c2"
                htmlFor="exampleFullName"
              >
                Full name
              </label>
            </styled.label>
          </ControlLabel>
        </div>
      </styled.div>
    </ControlGroup>
  </ControlGroupBase>
</TextField>
`;

exports[`TextField a TextFieldComponent object should return a TextFieldComponent object with a red bgColor  1`] = `
.c0 {
  bg-color: red;
  padding-bottom: 16px;
  padding-top: 4px;
  position: relative;
  background-color: hsl(4.1,89.6%,58.4%);
  width: 100%;
}

.c1 {
  font-family: inherit;
  font-size: inherit;
  font-weight: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  color: inherit;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  border: 1px solid hsl(0,0%,25%);
  border-radius: 4px;
  padding: 1rem;
  outline: 0;
  width: 100%;
}

.c1:focus {
  border-color: hsl(323.3,84.6%,28%);
  box-shadow: 0 0 0 1px hsl(323.3,84.6%,28%);
}

.c1:focus + label {
  color: hsl(323.3,84.6%,28%);
}

.c1[required] + label:after {
  content: "*";
}

.c1[disabled] {
  opacity: 0.3;
}

.c1[disabled] ~ * {
  color: rgba(0,0,0,0.3);
}

.c2 {
  background-color: hsl(4.1,89.6%,58.4%);
  left: 0.5rem;
  padding: 0 0.5rem;
  position: absolute;
  top: -0.5rem;
  font-family: inherit;
  font-size: 0.8rem;
  font-weight: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  color: inherit;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

<TextField
  activeColor="brandPrimary"
  assistiveText=""
  bgColor="red"
  controlId="exampleFullName2"
  controlLabel="Full name2"
  validationError=""
>
  <ControlGroupBase
    activeColor="brandPrimary"
    assistiveText=""
    bgColor="red"
    controlId="exampleFullName2"
    controlLabel="Full name2"
    paddingBottom="16px"
    paddingTop="4px"
    validationError=""
  >
    <ControlGroup
      bgColor="red"
      paddingBottom="16px"
      paddingTop="4px"
    >
      <styled.div>
        <div
          className="c0"
        >
          <TextFieldComponent
            activeColor="brandPrimary"
            borderColor="hsl(0, 0%, 25%)"
            borderRadius="4px"
            color="inherit"
            fontFamily="inherit"
            fontWeight="inherit"
            id="exampleFullName2"
            kerning="inherit"
            lg={false}
            padding="1rem"
            plainText={false}
            sm={false}
            textAlign="inherit"
            textDecoration="inherit"
            validationError=""
          >
            <styled.input
              id="exampleFullName2"
            >
              <input
                className="c1"
                id="exampleFullName2"
                readOnly={false}
                tabIndex="0"
                type="text"
              />
            </styled.input>
          </TextFieldComponent>
          <ControlLabel
            activeColor="brandPrimary"
            bgColor="hsl(4.1, 89.6%, 58.4%)"
            color="inherit"
            fontFamily="inherit"
            fontWeight="inherit"
            htmlFor="exampleFullName2"
            kerning="inherit"
            lg={false}
            sm={false}
            textAlign="inherit"
            textDecoration="inherit"
            validationError=""
          >
            <styled.label
              activeColor="brandPrimary"
              htmlFor="exampleFullName2"
            >
              <label
                className="c2"
                htmlFor="exampleFullName2"
              >
                Full name2
              </label>
            </styled.label>
          </ControlLabel>
        </div>
      </styled.div>
    </ControlGroup>
  </ControlGroupBase>
</TextField>
`;

exports[`TextField a plainText TextFieldComponent should return a disabled TextFieldComponent 1`] = `
.c0 {
  bg-color: white.light;
  padding-bottom: 16px;
  padding-top: 4px;
  position: relative;
  background-color: hsl(0,0%,100%);
  width: 100%;
}

.c1 {
  font-family: inherit;
  font-size: inherit;
  font-weight: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  color: inherit;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  border: 0;
  display: block;
  outline: 0;
  padding: 1rem;
}

.c2 {
  background-color: hsl(0,0%,100%);
  left: 0.5rem;
  padding: 0 0.5rem;
  position: absolute;
  top: -0.5rem;
  font-family: inherit;
  font-size: 0.8rem;
  font-weight: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  color: inherit;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

<TextField
  activeColor="red"
  assistiveText=""
  bgColor="white.light"
  controlId="exampleFullName2"
  controlLabel="Full name2"
  plainText={true}
  validationError=""
>
  <ControlGroupBase
    activeColor="red"
    assistiveText=""
    bgColor="white.light"
    controlId="exampleFullName2"
    controlLabel="Full name2"
    paddingBottom="16px"
    paddingTop="4px"
    validationError=""
  >
    <ControlGroup
      bgColor="white.light"
      paddingBottom="16px"
      paddingTop="4px"
    >
      <styled.div>
        <div
          className="c0"
        >
          <TextFieldComponent
            activeColor="brandPrimary"
            borderColor="hsl(0, 0%, 25%)"
            borderRadius="4px"
            color="inherit"
            fontFamily="inherit"
            fontWeight="inherit"
            id="exampleFullName2"
            kerning="inherit"
            lg={false}
            padding="1rem"
            plainText={true}
            sm={false}
            textAlign="inherit"
            textDecoration="inherit"
            validationError=""
          >
            <styled.input
              id="exampleFullName2"
            >
              <input
                className="c1"
                id="exampleFullName2"
                readOnly={true}
                tabIndex="-1"
                type="text"
              />
            </styled.input>
          </TextFieldComponent>
          <ControlLabel
            activeColor="red"
            bgColor="hsl(0, 0%, 100%)"
            color="inherit"
            fontFamily="inherit"
            fontWeight="inherit"
            htmlFor="exampleFullName2"
            kerning="inherit"
            lg={false}
            sm={false}
            textAlign="inherit"
            textDecoration="inherit"
            validationError=""
          >
            <styled.label
              activeColor="red"
              htmlFor="exampleFullName2"
            >
              <label
                className="c2"
                htmlFor="exampleFullName2"
              >
                Full name2
              </label>
            </styled.label>
          </ControlLabel>
        </div>
      </styled.div>
    </ControlGroup>
  </ControlGroupBase>
</TextField>
`;

exports[`TextField a small TextFieldComponent object should return a disabled TextFieldComponent 1`] = `
.c0 {
  bg-color: white.light;
  padding-bottom: 16px;
  padding-top: 4px;
  position: relative;
  background-color: hsl(0,0%,100%);
  width: 100%;
}

.c1 {
  font-family: inherit;
  font-size: inherit;
  font-weight: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  color: inherit;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  border: 1px solid hsl(0,0%,25%);
  border-radius: 4px;
  padding: 1rem;
  outline: 0;
  width: 100%;
}

.c1:focus {
  border-color: hsl(323.3,84.6%,28%);
  box-shadow: 0 0 0 1px hsl(323.3,84.6%,28%);
}

.c1:focus + label {
  color: hsl(323.3,84.6%,28%);
}

.c1[required] + label:after {
  content: "*";
}

.c1[disabled] {
  opacity: 0.3;
}

.c1[disabled] ~ * {
  color: rgba(0,0,0,0.3);
}

.c2 {
  background-color: hsl(0,0%,100%);
  left: 0.5rem;
  padding: 0 0.5rem;
  position: absolute;
  top: -0.5rem;
  font-family: inherit;
  font-size: 0.8rem;
  font-weight: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  color: inherit;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

<TextField
  activeColor="red"
  assistiveText=""
  bgColor="white.light"
  controlId="exampleFullName2"
  controlLabel="Full name2"
  disabled={true}
  validationError=""
>
  <ControlGroupBase
    activeColor="red"
    assistiveText=""
    bgColor="white.light"
    controlId="exampleFullName2"
    controlLabel="Full name2"
    paddingBottom="16px"
    paddingTop="4px"
    validationError=""
  >
    <ControlGroup
      bgColor="white.light"
      paddingBottom="16px"
      paddingTop="4px"
    >
      <styled.div>
        <div
          className="c0"
        >
          <TextFieldComponent
            activeColor="brandPrimary"
            borderColor="hsl(0, 0%, 25%)"
            borderRadius="4px"
            color="inherit"
            disabled={true}
            fontFamily="inherit"
            fontWeight="inherit"
            id="exampleFullName2"
            kerning="inherit"
            lg={false}
            padding="1rem"
            plainText={false}
            sm={false}
            textAlign="inherit"
            textDecoration="inherit"
            validationError=""
          >
            <styled.input
              disabled={true}
              id="exampleFullName2"
            >
              <input
                className="c1"
                disabled={true}
                id="exampleFullName2"
                readOnly={false}
                tabIndex="0"
                type="text"
              />
            </styled.input>
          </TextFieldComponent>
          <ControlLabel
            activeColor="red"
            bgColor="hsl(0, 0%, 100%)"
            color="inherit"
            fontFamily="inherit"
            fontWeight="inherit"
            htmlFor="exampleFullName2"
            kerning="inherit"
            lg={false}
            sm={false}
            textAlign="inherit"
            textDecoration="inherit"
            validationError=""
          >
            <styled.label
              activeColor="red"
              htmlFor="exampleFullName2"
            >
              <label
                className="c2"
                htmlFor="exampleFullName2"
              >
                Full name2
              </label>
            </styled.label>
          </ControlLabel>
        </div>
      </styled.div>
    </ControlGroup>
  </ControlGroupBase>
</TextField>
`;

exports[`TextField a small TextFieldComponent object should return a small TextFieldComponent object  1`] = `
.c0 {
  bg-color: white.light;
  padding-bottom: 16px;
  padding-top: 4px;
  position: relative;
  background-color: hsl(0,0%,100%);
  width: 100%;
}

.c1 {
  font-family: inherit;
  font-size: 0.8rem;
  font-weight: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  color: inherit;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  border: 1px solid hsl(0,0%,25%);
  border-radius: 2px;
  padding: 1rem;
  outline: 0;
  width: 100%;
}

.c1:focus {
  border-color: hsl(323.3,84.6%,28%);
  box-shadow: 0 0 0 1px hsl(323.3,84.6%,28%);
}

.c1:focus + label {
  color: hsl(323.3,84.6%,28%);
}

.c1[required] + label:after {
  content: "*";
}

.c1[disabled] {
  opacity: 0.3;
}

.c1[disabled] ~ * {
  color: rgba(0,0,0,0.3);
}

.c2 {
  background-color: hsl(0,0%,100%);
  left: 0.5rem;
  padding: 0 0.5rem;
  position: absolute;
  top: -0.5rem;
  font-family: inherit;
  font-size: 0.8rem;
  font-weight: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  color: inherit;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

<TextField
  activeColor="brandPrimary"
  assistiveText=""
  bgColor="white.light"
  controlId="exampleFullName"
  controlLabel="Full name"
  sm={true}
  validationError=""
>
  <ControlGroupBase
    activeColor="brandPrimary"
    assistiveText=""
    bgColor="white.light"
    controlId="exampleFullName"
    controlLabel="Full name"
    paddingBottom="16px"
    paddingTop="4px"
    validationError=""
  >
    <ControlGroup
      bgColor="white.light"
      paddingBottom="16px"
      paddingTop="4px"
    >
      <styled.div>
        <div
          className="c0"
        >
          <TextFieldComponent
            activeColor="brandPrimary"
            borderColor="hsl(0, 0%, 25%)"
            borderRadius="4px"
            color="inherit"
            fontFamily="inherit"
            fontWeight="inherit"
            id="exampleFullName"
            kerning="inherit"
            lg={false}
            padding="1rem"
            plainText={false}
            sm={true}
            textAlign="inherit"
            textDecoration="inherit"
            validationError=""
          >
            <styled.input
              id="exampleFullName"
            >
              <input
                className="c1"
                id="exampleFullName"
                readOnly={false}
                tabIndex="0"
                type="text"
              />
            </styled.input>
          </TextFieldComponent>
          <ControlLabel
            activeColor="brandPrimary"
            bgColor="hsl(0, 0%, 100%)"
            color="inherit"
            fontFamily="inherit"
            fontWeight="inherit"
            htmlFor="exampleFullName"
            kerning="inherit"
            lg={false}
            sm={false}
            textAlign="inherit"
            textDecoration="inherit"
            validationError=""
          >
            <styled.label
              activeColor="brandPrimary"
              htmlFor="exampleFullName"
            >
              <label
                className="c2"
                htmlFor="exampleFullName"
              >
                Full name
              </label>
            </styled.label>
          </ControlLabel>
        </div>
      </styled.div>
    </ControlGroup>
  </ControlGroupBase>
</TextField>
`;

exports[`TextField a small TextFieldComponent object should return a small TextFieldComponent object with a red activeColor  1`] = `
.c0 {
  bg-color: white.light;
  padding-bottom: 16px;
  padding-top: 4px;
  position: relative;
  background-color: hsl(0,0%,100%);
  width: 100%;
}

.c1 {
  font-family: inherit;
  font-size: inherit;
  font-weight: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  color: inherit;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  border: 1px solid hsl(0,0%,25%);
  border-radius: 4px;
  padding: 1rem;
  outline: 0;
  width: 100%;
}

.c1:focus {
  border-color: hsl(323.3,84.6%,28%);
  box-shadow: 0 0 0 1px hsl(323.3,84.6%,28%);
}

.c1:focus + label {
  color: hsl(323.3,84.6%,28%);
}

.c1[required] + label:after {
  content: "*";
}

.c1[disabled] {
  opacity: 0.3;
}

.c1[disabled] ~ * {
  color: rgba(0,0,0,0.3);
}

.c2 {
  background-color: hsl(0,0%,100%);
  left: 0.5rem;
  padding: 0 0.5rem;
  position: absolute;
  top: -0.5rem;
  font-family: inherit;
  font-size: 0.8rem;
  font-weight: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  color: inherit;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

<TextField
  activeColor="red"
  assistiveText=""
  bgColor="white.light"
  controlId="exampleFullName2"
  controlLabel="Full name2"
  validationError=""
>
  <ControlGroupBase
    activeColor="red"
    assistiveText=""
    bgColor="white.light"
    controlId="exampleFullName2"
    controlLabel="Full name2"
    paddingBottom="16px"
    paddingTop="4px"
    validationError=""
  >
    <ControlGroup
      bgColor="white.light"
      paddingBottom="16px"
      paddingTop="4px"
    >
      <styled.div>
        <div
          className="c0"
        >
          <TextFieldComponent
            activeColor="brandPrimary"
            borderColor="hsl(0, 0%, 25%)"
            borderRadius="4px"
            color="inherit"
            fontFamily="inherit"
            fontWeight="inherit"
            id="exampleFullName2"
            kerning="inherit"
            lg={false}
            padding="1rem"
            plainText={false}
            sm={false}
            textAlign="inherit"
            textDecoration="inherit"
            validationError=""
          >
            <styled.input
              id="exampleFullName2"
            >
              <input
                className="c1"
                id="exampleFullName2"
                readOnly={false}
                tabIndex="0"
                type="text"
              />
            </styled.input>
          </TextFieldComponent>
          <ControlLabel
            activeColor="red"
            bgColor="hsl(0, 0%, 100%)"
            color="inherit"
            fontFamily="inherit"
            fontWeight="inherit"
            htmlFor="exampleFullName2"
            kerning="inherit"
            lg={false}
            sm={false}
            textAlign="inherit"
            textDecoration="inherit"
            validationError=""
          >
            <styled.label
              activeColor="red"
              htmlFor="exampleFullName2"
            >
              <label
                className="c2"
                htmlFor="exampleFullName2"
              >
                Full name2
              </label>
            </styled.label>
          </ControlLabel>
        </div>
      </styled.div>
    </ControlGroup>
  </ControlGroupBase>
</TextField>
`;

exports[`TextField a small TextFieldComponent object should return a small TextFieldComponent object with space mb  1`] = `
.c0 {
  bg-color: white.light;
  margin: 1;
  padding-bottom: 16px;
  padding-top: 4px;
  position: relative;
  background-color: hsl(0,0%,100%);
  width: 100%;
}

.c1 {
  font-family: inherit;
  font-size: inherit;
  font-weight: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  color: inherit;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  border: 1px solid hsl(0,0%,25%);
  border-radius: 4px;
  padding: 1rem;
  outline: 0;
  width: 100%;
}

.c1:focus {
  border-color: hsl(323.3,84.6%,28%);
  box-shadow: 0 0 0 1px hsl(323.3,84.6%,28%);
}

.c1:focus + label {
  color: hsl(323.3,84.6%,28%);
}

.c1[required] + label:after {
  content: "*";
}

.c1[disabled] {
  opacity: 0.3;
}

.c1[disabled] ~ * {
  color: rgba(0,0,0,0.3);
}

.c2 {
  background-color: hsl(0,0%,100%);
  left: 0.5rem;
  padding: 0 0.5rem;
  position: absolute;
  top: -0.5rem;
  font-family: inherit;
  font-size: 0.8rem;
  font-weight: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  color: inherit;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

<TextField
  activeColor="brandPrimary"
  assistiveText=""
  bgColor="white.light"
  controlId="exampleFullName2"
  controlLabel="Full name2"
  m="1"
  validationError=""
>
  <ControlGroupBase
    activeColor="brandPrimary"
    assistiveText=""
    bgColor="white.light"
    controlId="exampleFullName2"
    controlLabel="Full name2"
    margin="1"
    paddingBottom="16px"
    paddingTop="4px"
    validationError=""
  >
    <ControlGroup
      bgColor="white.light"
      margin="1"
      paddingBottom="16px"
      paddingTop="4px"
    >
      <styled.div>
        <div
          className="c0"
        >
          <TextFieldComponent
            activeColor="brandPrimary"
            borderColor="hsl(0, 0%, 25%)"
            borderRadius="4px"
            color="inherit"
            fontFamily="inherit"
            fontWeight="inherit"
            id="exampleFullName2"
            kerning="inherit"
            lg={false}
            padding="1rem"
            plainText={false}
            sm={false}
            textAlign="inherit"
            textDecoration="inherit"
            validationError=""
          >
            <styled.input
              id="exampleFullName2"
            >
              <input
                className="c1"
                id="exampleFullName2"
                readOnly={false}
                tabIndex="0"
                type="text"
              />
            </styled.input>
          </TextFieldComponent>
          <ControlLabel
            activeColor="brandPrimary"
            bgColor="hsl(0, 0%, 100%)"
            color="inherit"
            fontFamily="inherit"
            fontWeight="inherit"
            htmlFor="exampleFullName2"
            kerning="inherit"
            lg={false}
            sm={false}
            textAlign="inherit"
            textDecoration="inherit"
            validationError=""
          >
            <styled.label
              activeColor="brandPrimary"
              htmlFor="exampleFullName2"
            >
              <label
                className="c2"
                htmlFor="exampleFullName2"
              >
                Full name2
              </label>
            </styled.label>
          </ControlLabel>
        </div>
      </styled.div>
    </ControlGroup>
  </ControlGroupBase>
</TextField>
`;

exports[`TextField with assistive text should return a TextField object contain Assistive Text 1`] = `
.c0 {
  bg-color: white.light;
  padding-bottom: 16px;
  padding-top: 4px;
  position: relative;
  background-color: hsl(0,0%,100%);
  width: 100%;
}

.c1 {
  font-family: inherit;
  font-size: inherit;
  font-weight: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  color: inherit;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  border: 1px solid hsl(0,0%,25%);
  border-radius: 4px;
  padding: 1rem;
  outline: 0;
  width: 100%;
}

.c1:focus {
  border-color: hsl(323.3,84.6%,28%);
  box-shadow: 0 0 0 1px hsl(323.3,84.6%,28%);
}

.c1:focus + label {
  color: hsl(323.3,84.6%,28%);
}

.c1[required] + label:after {
  content: "*";
}

.c1[disabled] {
  opacity: 0.3;
}

.c1[disabled] ~ * {
  color: rgba(0,0,0,0.3);
}

.c2 {
  background-color: hsl(0,0%,100%);
  left: 0.5rem;
  padding: 0 0.5rem;
  position: absolute;
  top: -0.5rem;
  font-family: inherit;
  font-size: 0.8rem;
  font-weight: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  color: inherit;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c3 {
  padding: 0 1rem;
  font-family: inherit;
  font-size: 0.8rem;
  font-weight: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  color: inherit;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

<TextField
  activeColor="brandPrimary"
  assistiveText="Please tell me your name"
  bgColor="white.light"
  controlId="exampleFullName"
  controlLabel="Full name"
  validationError=""
>
  <ControlGroupBase
    activeColor="brandPrimary"
    assistiveText="Please tell me your name"
    bgColor="white.light"
    controlId="exampleFullName"
    controlLabel="Full name"
    paddingBottom="16px"
    paddingTop="4px"
    validationError=""
  >
    <ControlGroup
      bgColor="white.light"
      paddingBottom="16px"
      paddingTop="4px"
    >
      <styled.div>
        <div
          className="c0"
        >
          <TextFieldComponent
            activeColor="brandPrimary"
            borderColor="hsl(0, 0%, 25%)"
            borderRadius="4px"
            color="inherit"
            fontFamily="inherit"
            fontWeight="inherit"
            id="exampleFullName"
            kerning="inherit"
            lg={false}
            padding="1rem"
            plainText={false}
            sm={false}
            textAlign="inherit"
            textDecoration="inherit"
            validationError=""
          >
            <styled.input
              id="exampleFullName"
            >
              <input
                className="c1"
                id="exampleFullName"
                readOnly={false}
                tabIndex="0"
                type="text"
              />
            </styled.input>
          </TextFieldComponent>
          <ControlLabel
            activeColor="brandPrimary"
            bgColor="hsl(0, 0%, 100%)"
            color="inherit"
            fontFamily="inherit"
            fontWeight="inherit"
            htmlFor="exampleFullName"
            kerning="inherit"
            lg={false}
            sm={false}
            textAlign="inherit"
            textDecoration="inherit"
            validationError=""
          >
            <styled.label
              activeColor="brandPrimary"
              htmlFor="exampleFullName"
            >
              <label
                className="c2"
                htmlFor="exampleFullName"
              >
                Full name
              </label>
            </styled.label>
          </ControlLabel>
          <AssistiveText
            color="inherit"
            fontFamily="inherit"
            fontWeight="inherit"
            id="exampleFullNameHelp"
            kerning="inherit"
            lg={false}
            sm={false}
            textAlign="inherit"
            textDecoration="inherit"
          >
            <styled.div
              id="exampleFullNameHelp"
            >
              <div
                className="c3"
                id="exampleFullNameHelp"
              >
                Please tell me your name
              </div>
            </styled.div>
          </AssistiveText>
        </div>
      </styled.div>
    </ControlGroup>
  </ControlGroupBase>
</TextField>
`;

exports[`TextField with some other props should return a TextField object contain input with those other props  1`] = `
.c0 {
  bg-color: white.light;
  padding-bottom: 16px;
  padding-top: 4px;
  position: relative;
  background-color: hsl(0,0%,100%);
  width: 100%;
}

.c1 {
  font-family: inherit;
  font-size: inherit;
  font-weight: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  color: inherit;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  border: 1px solid hsl(0,0%,25%);
  border-radius: 4px;
  padding: 1rem;
  outline: 0;
  width: 100%;
}

.c1:focus {
  border-color: hsl(323.3,84.6%,28%);
  box-shadow: 0 0 0 1px hsl(323.3,84.6%,28%);
}

.c1:focus + label {
  color: hsl(323.3,84.6%,28%);
}

.c1[required] + label:after {
  content: "*";
}

.c1[disabled] {
  opacity: 0.3;
}

.c1[disabled] ~ * {
  color: rgba(0,0,0,0.3);
}

.c2 {
  background-color: hsl(0,0%,100%);
  left: 0.5rem;
  padding: 0 0.5rem;
  position: absolute;
  top: -0.5rem;
  font-family: inherit;
  font-size: 0.8rem;
  font-weight: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  color: inherit;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

<TextField
  activeColor="brandPrimary"
  assistiveText=""
  bgColor="white.light"
  controlId="exampleFullName"
  controlLabel="Full name"
  link="abc"
  required={true}
  validationError=""
>
  <ControlGroupBase
    activeColor="brandPrimary"
    assistiveText=""
    bgColor="white.light"
    controlId="exampleFullName"
    controlLabel="Full name"
    paddingBottom="16px"
    paddingTop="4px"
    validationError=""
  >
    <ControlGroup
      bgColor="white.light"
      paddingBottom="16px"
      paddingTop="4px"
    >
      <styled.div>
        <div
          className="c0"
        >
          <TextFieldComponent
            activeColor="brandPrimary"
            borderColor="hsl(0, 0%, 25%)"
            borderRadius="4px"
            color="inherit"
            fontFamily="inherit"
            fontWeight="inherit"
            id="exampleFullName"
            kerning="inherit"
            lg={false}
            link="abc"
            padding="1rem"
            plainText={false}
            required={true}
            sm={false}
            textAlign="inherit"
            textDecoration="inherit"
            validationError=""
          >
            <styled.input
              id="exampleFullName"
              link="abc"
              required={true}
            >
              <input
                className="c1"
                id="exampleFullName"
                readOnly={false}
                required={true}
                tabIndex="0"
                type="text"
              />
            </styled.input>
          </TextFieldComponent>
          <ControlLabel
            activeColor="brandPrimary"
            bgColor="hsl(0, 0%, 100%)"
            color="inherit"
            fontFamily="inherit"
            fontWeight="inherit"
            htmlFor="exampleFullName"
            kerning="inherit"
            lg={false}
            sm={false}
            textAlign="inherit"
            textDecoration="inherit"
            validationError=""
          >
            <styled.label
              activeColor="brandPrimary"
              htmlFor="exampleFullName"
            >
              <label
                className="c2"
                htmlFor="exampleFullName"
              >
                Full name
              </label>
            </styled.label>
          </ControlLabel>
        </div>
      </styled.div>
    </ControlGroup>
  </ControlGroupBase>
</TextField>
`;

exports[`TextField with validation error should return a TextField object contain Assistive Text with error style 1`] = `
.c0 {
  bg-color: white.light;
  padding-bottom: 16px;
  padding-top: 4px;
  position: relative;
  background-color: hsl(0,0%,100%);
  width: 100%;
}

.c1 {
  font-family: inherit;
  font-size: inherit;
  font-weight: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  color: inherit;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  border: 1px solid hsl(4.1,89.6%,58.4%);
  border-radius: 4px;
  padding: 1rem;
  outline: 0;
  width: 100%;
}

.c1:focus {
  border-color: hsl(323.3,84.6%,28%);
  box-shadow: 0 0 0 1px hsl(323.3,84.6%,28%);
}

.c1:focus + label {
  color: hsl(323.3,84.6%,28%);
}

.c1[required] + label:after {
  content: "*";
}

.c1[disabled] {
  opacity: 0.3;
}

.c1[disabled] ~ * {
  color: rgba(0,0,0,0.3);
}

.c2 {
  background-color: hsl(0,0%,100%);
  left: 0.5rem;
  padding: 0 0.5rem;
  position: absolute;
  top: -0.5rem;
  font-family: inherit;
  font-size: 0.8rem;
  font-weight: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  color: hsl(4.1,89.6%,58.4%);
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c3 {
  padding: 0 1rem;
  font-family: inherit;
  font-size: 0.8rem;
  font-weight: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  color: hsl(4.1,89.6%,58.4%);
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

<TextField
  activeColor="brandPrimary"
  assistiveText=""
  bgColor="white.light"
  controlId="exampleFullName"
  controlLabel="Full name"
  validationError="This is a required field."
>
  <ControlGroupBase
    activeColor="brandPrimary"
    assistiveText=""
    bgColor="white.light"
    controlId="exampleFullName"
    controlLabel="Full name"
    paddingBottom="16px"
    paddingTop="4px"
    validationError="This is a required field."
  >
    <ControlGroup
      bgColor="white.light"
      paddingBottom="16px"
      paddingTop="4px"
    >
      <styled.div>
        <div
          className="c0"
        >
          <TextFieldComponent
            activeColor="brandPrimary"
            borderColor="hsl(0, 0%, 25%)"
            borderRadius="4px"
            color="inherit"
            fontFamily="inherit"
            fontWeight="inherit"
            id="exampleFullName"
            kerning="inherit"
            lg={false}
            padding="1rem"
            plainText={false}
            sm={false}
            textAlign="inherit"
            textDecoration="inherit"
            validationError="This is a required field."
          >
            <styled.input
              id="exampleFullName"
            >
              <input
                className="c1"
                id="exampleFullName"
                readOnly={false}
                tabIndex="0"
                type="text"
              />
            </styled.input>
          </TextFieldComponent>
          <ControlLabel
            activeColor="brandPrimary"
            bgColor="hsl(0, 0%, 100%)"
            color="inherit"
            fontFamily="inherit"
            fontWeight="inherit"
            htmlFor="exampleFullName"
            kerning="inherit"
            lg={false}
            sm={false}
            textAlign="inherit"
            textDecoration="inherit"
            validationError="This is a required field."
          >
            <styled.label
              activeColor="brandPrimary"
              htmlFor="exampleFullName"
            >
              <label
                className="c2"
                htmlFor="exampleFullName"
              >
                Full name
              </label>
            </styled.label>
          </ControlLabel>
          <AssistiveText
            color="brandDanger"
            fontFamily="inherit"
            fontWeight="inherit"
            id="exampleFullNameError"
            kerning="inherit"
            lg={false}
            sm={false}
            textAlign="inherit"
            textDecoration="inherit"
          >
            <styled.div
              id="exampleFullNameError"
            >
              <div
                className="c3"
                id="exampleFullNameError"
              >
                This is a required field.
              </div>
            </styled.div>
          </AssistiveText>
        </div>
      </styled.div>
    </ControlGroup>
  </ControlGroupBase>
</TextField>
`;
